# Studdup

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  run.py
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/: Card.h  DatabaseManager.cpp  DatabaseManager.h  Date.cpp  Date.h  Scheduler.cpp  Scheduler.h  main.cpp
src/ui/: AgendaView.cpp  App.cpp  App.h  CardEditor.cpp  HelpView.cpp  HistoryView.cpp  openurl.h
tests/: CMakeLists.txt  test_date.cpp  test_scheduler.cpp
